--- a/templates/presets/drupal8.conf.tmpl
+++ b/templates/presets/drupal8.conf.tmpl
@@ -125,7 +125,9 @@ location @drupal {
     fastcgi_param SCRIPT_NAME /index.php;
     fastcgi_param SCRIPT_FILENAME $document_root/index.php;
     fastcgi_pass php;
+    {{- if not (getenv "NGINX_DISABLE_UPLOAD_PROGRESS") }}
     track_uploads {{ getenv "NGINX_TRACK_UPLOADS" "uploads 60s" }};
+    {{- end }}
 }
 
 location @drupal-no-args {
