--- a/templates/presets/drupal7.conf.tmpl
+++ b/templates/presets/drupal7.conf.tmpl
@@ -13,6 +13,24 @@ fastcgi_hide_header 'X-Drupal-Dynamic-Cache';
 {{- end }}
 
 location / {
+    location = /robots.txt {
+        try_files $uri @drupal-no-args;
+        access_log off;
+        log_not_found off;
+    }
+
+    location = /humans.txt {
+        try_files $uri @drupal-no-args;
+        access_log off;
+        log_not_found off;
+    }
+
+    location = /ads.txt {
+        try_files $uri @drupal-no-args;
+        access_log off;
+        log_not_found off;
+    }
+
     {{- if getenv "NGINX_DRUPAL_FILE_PROXY_URL" }}
     location ~* /sites/.+/files {
         try_files $uri @file_proxy;
