--- a/templates/presets/laravel.conf.tmpl
+++ b/templates/presets/laravel.conf.tmpl
@@ -15,6 +15,11 @@ location / {
         try_files $uri /{{ $index }}?$args;
     }
 
+    location ~ ^/flux/flux(\.min)?\.(js|css)$ {
+        expires off;
+        try_files $uri /{{ $index }}?$args;
+    }
+
     location ~* ^.+\.(?:{{ $static }})$ {
         access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
         tcp_nodelay {{ getenv "NGINX_STATIC_TCP_NODELAY" "off" }};
