--- a/templates/includes/defaults.conf.tmpl
+++ b/templates/includes/defaults.conf.tmpl
@@ -39,6 +39,12 @@ location ^~ /ads.txt {
     access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
 }
 
+location ^~ /llms.txt {
+    allow all;
+    log_not_found off;
+    access_log {{ getenv "NGINX_STATIC_ACCESS_LOG" "off" }};
+}
+
 location @empty {
     expires {{ getenv "NGINX_STATIC_EXPIRES" "1y" }};
     empty_gif;
